stop showing white space on right side

--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,12 @@
     margin: 0;
 }
 
-html, body{
-    width:100%;
-    overflow-x:hidden;
+html,body {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
-
 
 #mainNavbar {
     background-color: rgba(91, 31, 148, 0);
@@ -133,5 +134,6 @@ html, body{
     
     #projects-content div {
         padding-left: 12px;
+        padding-right: 12px;
     }
 }
